--- a/CBayMobileApp/Views/Account/Downlines.xaml
+++ b/CBayMobileApp/Views/Account/Downlines.xaml
@@ -7,8 +7,6 @@
 
 
     <StackLayout Margin="30,20">
-        <!--<Label Text="My Downlines" TextColor="#000000" FontSize="18" Margin="0,15,0,7" FontFamily="DMSans-Medium" HorizontalTextAlignment="Start"/>-->
-
         <CollectionView x:Name="membership" ItemsSource="{Binding MembershipData}" Margin="0,10">
             <CollectionView.ItemsLayout>
                 <GridItemsLayout VerticalItemSpacing="0" HorizontalItemSpacing="20" Orientation="Vertical"/>
@@ -16,6 +14,9 @@
             <CollectionView.ItemTemplate>
                 <DataTemplate>
                     <Frame  BorderColor="#C4C6CF" BackgroundColor="White" HasShadow="False" >
+                        <Frame.GestureRecognizers>
+                            <TapGestureRecognizer Command="{Binding Path=BindingContext.TappedCommand, Source={x:Reference membership}}" CommandParameter="{Binding .}"/>
+                        </Frame.GestureRecognizers>
                         <FlexLayout JustifyContent="SpaceBetween" AlignContent="Center" AlignItems="Center">
                             <StackLayout Orientation="Horizontal">
                                 <Image Source="cbaynavaccount.png" Margin="0,0,0,0"/>
@@ -41,138 +42,4 @@
     </StackLayout>
 
 
-    <!--<ScrollView VerticalScrollBarVisibility="Never" Margin="20">
-        <StackLayout Margin="0,0,0,40">
-            <Label Text="My Downlines" TextColor="#000000" FontSize="18" Margin="0,15,0,7" FontFamily="DMSans-Medium" HorizontalTextAlignment="Start"/>
-
-            <Frame BorderColor="#C4C6CF" BackgroundColor="White" HasShadow="False">
-                <FlexLayout JustifyContent="SpaceBetween" AlignContent="Center" AlignItems="Center">
-                    <StackLayout Orientation="Horizontal">
-                        <Image Source="cbayterms.png" Margin="0,0,20,0"/>
-                        <StackLayout>
-                            <Label Text="Terms and Conditions" TextColor="#000000" FontSize="18" Margin="0,0,0,0" FontFamily="DMSans-Medium" HorizontalTextAlignment="Center"/>
-                        </StackLayout>
-                    </StackLayout>
-
-                    <StackLayout>
-                        <Image Source="cbayforwardarrow.png"/>
-                    </StackLayout>
-                </FlexLayout>
-            </Frame>
-            <Frame  BorderColor="#C4C6CF" BackgroundColor="White" HasShadow="False" Margin="0,-10">
-                <FlexLayout JustifyContent="SpaceBetween" AlignContent="Center" AlignItems="Center">
-                    <StackLayout Orientation="Horizontal">
-                        <Image Source="cbaypolicy.png" Margin="0,0,20,0"/>
-                        <StackLayout>
-                            <Label Text="Privacy policies" TextColor="#000000" FontSize="18" Margin="0,0,0,0" FontFamily="DMSans-Medium" HorizontalTextAlignment="Center"/>
-                        </StackLayout>
-                    </StackLayout>
-
-                    <StackLayout>
-                        <Image Source="cbayforwardarrow.png"/>
-                    </StackLayout>
-                </FlexLayout>
-            </Frame>
-
-            <Frame  BorderColor="#C4C6CF" BackgroundColor="White" HasShadow="False" Margin="0,-10">
-                <FlexLayout JustifyContent="SpaceBetween" AlignContent="Center" AlignItems="Center">
-                    <StackLayout Orientation="Horizontal">
-                        <Image Source="cbaypolicy.png" Margin="0,0,20,0"/>
-                        <StackLayout>
-                            <Label Text="Privacy policies" TextColor="#000000" FontSize="18" Margin="0,0,0,0" FontFamily="DMSans-Medium" HorizontalTextAlignment="Center"/>
-                        </StackLayout>
-                    </StackLayout>
-
-                    <StackLayout>
-                        <Image Source="cbayforwardarrow.png"/>
-                    </StackLayout>
-                </FlexLayout>
-            </Frame>
-            <Frame  BorderColor="#C4C6CF" BackgroundColor="White" HasShadow="False" Margin="0,-10">
-                <FlexLayout JustifyContent="SpaceBetween" AlignContent="Center" AlignItems="Center">
-                    <StackLayout Orientation="Horizontal">
-                        <Image Source="cbaypolicy.png" Margin="0,0,20,0"/>
-                        <StackLayout>
-                            <Label Text="Privacy policies" TextColor="#000000" FontSize="18" Margin="0,0,0,0" FontFamily="DMSans-Medium" HorizontalTextAlignment="Center"/>
-                        </StackLayout>
-                    </StackLayout>
-
-                    <StackLayout>
-                        <Image Source="cbayforwardarrow.png"/>
-                    </StackLayout>
-                </FlexLayout>
-            </Frame>
-            <Frame  BorderColor="#C4C6CF" BackgroundColor="White" HasShadow="False" Margin="0,-10">
-                <FlexLayout JustifyContent="SpaceBetween" AlignContent="Center" AlignItems="Center">
-                    <StackLayout Orientation="Horizontal">
-                        <Image Source="cbaypolicy.png" Margin="0,0,20,0"/>
-                        <StackLayout>
-                            <Label Text="Privacy policies" TextColor="#000000" FontSize="18" Margin="0,0,0,0" FontFamily="DMSans-Medium" HorizontalTextAlignment="Center"/>
-                        </StackLayout>
-                    </StackLayout>
-
-                    <StackLayout>
-                        <Image Source="cbayforwardarrow.png"/>
-                    </StackLayout>
-                </FlexLayout>
-            </Frame>
-            <Frame  BorderColor="#C4C6CF" BackgroundColor="White" HasShadow="False" Margin="0,-10">
-                <FlexLayout JustifyContent="SpaceBetween" AlignContent="Center" AlignItems="Center">
-                    <StackLayout Orientation="Horizontal">
-                        <Image Source="cbaypolicy.png" Margin="0,0,20,0"/>
-                        <StackLayout>
-                            <Label Text="Privacy policies" TextColor="#000000" FontSize="18" Margin="0,0,0,0" FontFamily="DMSans-Medium" HorizontalTextAlignment="Center"/>
-                        </StackLayout>
-                    </StackLayout>
-
-                    <StackLayout>
-                        <Image Source="cbayforwardarrow.png"/>
-                    </StackLayout>
-                </FlexLayout>
-            </Frame>
-            <Frame  BorderColor="#C4C6CF" BackgroundColor="White" HasShadow="False" Margin="0,-10">
-                <FlexLayout JustifyContent="SpaceBetween" AlignContent="Center" AlignItems="Center">
-                    <StackLayout Orientation="Horizontal">
-                        <Image Source="cbaypolicy.png" Margin="0,0,20,0"/>
-                        <StackLayout>
-                            <Label Text="Privacy policies" TextColor="#000000" FontSize="18" Margin="0,0,0,0" FontFamily="DMSans-Medium" HorizontalTextAlignment="Center"/>
-                        </StackLayout>
-                    </StackLayout>
-
-                    <StackLayout>
-                        <Image Source="cbayforwardarrow.png"/>
-                    </StackLayout>
-                </FlexLayout>
-            </Frame>
-            <Frame  BorderColor="#C4C6CF" BackgroundColor="White" HasShadow="False" Margin="0,-10">
-                <FlexLayout JustifyContent="SpaceBetween" AlignContent="Center" AlignItems="Center">
-                    <StackLayout Orientation="Horizontal">
-                        <Image Source="cbaypolicy.png" Margin="0,0,20,0"/>
-                        <StackLayout>
-                            <Label Text="Privacy policies" TextColor="#000000" FontSize="18" Margin="0,0,0,0" FontFamily="DMSans-Medium" HorizontalTextAlignment="Center"/>
-                        </StackLayout>
-                    </StackLayout>
-
-                    <StackLayout>
-                        <Image Source="cbayforwardarrow.png"/>
-                    </StackLayout>
-                </FlexLayout>
-            </Frame>
-            <Frame  BorderColor="#C4C6CF" BackgroundColor="White" HasShadow="False" Margin="0,-10">
-                <FlexLayout JustifyContent="SpaceBetween" AlignContent="Center" AlignItems="Center">
-                    <StackLayout Orientation="Horizontal">
-                        <Image Source="cbaypolicy.png" Margin="0,0,20,0"/>
-                        <StackLayout>
-                            <Label Text="Privacy policies" TextColor="#000000" FontSize="18" Margin="0,0,0,0" FontFamily="DMSans-Medium" HorizontalTextAlignment="Center"/>
-                        </StackLayout>
-                    </StackLayout>
-
-                    <StackLayout>
-                        <Image Source="cbayforwardarrow.png"/>
-                    </StackLayout>
-                </FlexLayout>
-            </Frame>
-        </StackLayout>
-
-    </ScrollView>-->
 </ContentPage>
