--- a/CBayMobileApp/Views/Account/UserProfile.xaml
+++ b/CBayMobileApp/Views/Account/UserProfile.xaml
@@ -69,52 +69,35 @@
                 <Label Text="{Binding Gender}" TextColor="#191919" FontSize="16"/>
             </StackLayout>
             <Line X1="0"
-                      Y1="0"
-                      X2="400"
-                      Y2="0"
-                      Margin="0,0"
-                      Grid.Row="6"
-                      Stroke="#333333"
-                      StrokeDashArray="0,0"
-                      StrokeDashOffset="2"/>
+                    Y1="0"
+                    X2="400"
+                    Y2="0"
+                    Margin="0,0"
+                    Grid.Row="6"
+                    Stroke="#333333"
+                    StrokeDashArray="0,0"
+                    StrokeDashOffset="2"/>
 
             <StackLayout Margin="20,10,20,0">
                 <Label Text="Date of Birth"/>
                 <Label Text="{Binding DOB}" TextColor="#191919" FontSize="16"/>
             </StackLayout>
             <Line X1="0"
-                      Y1="0"
-                      X2="400"
-                      Y2="0"
-                      Margin="0,0"
-                      Grid.Row="6"
-                      Stroke="#333333"
-                      StrokeDashArray="0,0"
-                      StrokeDashOffset="2"/>
+                    Y1="0"
+                    X2="400"
+                    Y2="0"
+                    Margin="0,0"
+                    Grid.Row="6"
+                    Stroke="#333333"
+                    StrokeDashArray="0,0"
+                    StrokeDashOffset="2"/>
 
-            <!--<FlexLayout JustifyContent="SpaceBetween" Margin="20,10,20,10">
-                <FlexLayout.GestureRecognizers>
-                    <TapGestureRecognizer />
-                </FlexLayout.GestureRecognizers>
-                <Label Text="Logout" TextColor="Black" FontSize="18" Margin="0,0" VerticalTextAlignment="Center"/>
-                <ImageButton BackgroundColor="Transparent"  Source="newlogout.png" WidthRequest="25" HeightRequest="25"/>
-            </FlexLayout>
-            <Line X1="0"
-                      Y1="0"
-                      X2="400"
-                      Y2="0"
-                      Margin="0,0"
-                      Grid.Row="6"
-                      Stroke="#333333"
-                      StrokeDashArray="0,0"
-                      StrokeDashOffset="2"/>-->
-
-            <!--<Frame BorderColor="{StaticResource SecondaryColor}" CornerRadius="20" HasShadow="False" Margin="0,10" Padding="25,5" HorizontalOptions="CenterAndExpand">
-                    <Frame.GestureRecognizers>
-                        <TapGestureRecognizer/>
-                    </Frame.GestureRecognizers>
-                    <Label Text="Save" TextColor="{StaticResource SecondaryColor}" FontSize="16" HorizontalTextAlignment="Center" VerticalTextAlignment="Center"/>
-                </Frame>-->
+            <Frame BorderColor="{StaticResource PrimaryColor}" CornerRadius="20" HasShadow="False" Margin="0,20,0,0" Padding="25,5" HorizontalOptions="CenterAndExpand">
+                <Frame.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="To_UpdateProfile"/>
+                </Frame.GestureRecognizers>
+                <Label Text="Edit Profile" TextColor="{StaticResource PrimaryColor}" FontSize="16" HorizontalTextAlignment="Center" VerticalTextAlignment="Center"/>
+            </Frame>
         </StackLayout>
     </ScrollView>
 
